--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.seanmeedev.shoppinglist"
+        applicationId "com.seanmeedevworld.shoppinglist"
         minSdkVersion 27
         targetSdkVersion 30
         versionCode 1
